# Alegna

./: .gitignore  CMakeLists.txt
include/: tokens.h
include/exceptions/: exceptions.h
include/lexer/: finite_automata.h  lexer.h  regex_parser.h
include/util/: compiler_iterators.h
src/: exceptions.cpp  finite_automata.cpp  lexer.cpp  regex_parser.cpp
tests/: test_framework.h  test_regex_parser.cpp
